--- a/index.html
+++ b/index.html
@@ -1,29 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Estrutura Html - Aula Html5 - Página 1</title>
-    <meta charset="UTF-8">
+    <title>Estrutura Html Página 1</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   </head>
-<body>
+  <!-- Isso é um comentário -->
+  <body>
     <h1>Texto h1</h1>
-    <h2>Texto h2</h2>
-    <h3>Texto h3</h3>
-    <h4>Texto h4</h4>
-    <h5>Texto h5</h5>
-    <h6>Texto h6</h6>
+    <h2>Sub-Título h2</h2>
+    <p>Paragrafo
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+      Doloribus et aliquam dolorum, laudantium dolores adipisci 
+      numquam non fugit suscipit vitae reprehenderit! Id reiciendis 
+      sunt aspernatur rem quo porro molestias nihil?</p>
 
-    <h1>Texto h1</h1>
-    <h2>Sub-Título</h2>
-    <p>Paragrafo
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-      Doloribus et aliquam dolorum, laudantium dolores adipisci 
-      numquam non fugit suscipit vitae reprehenderit! Id reiciendis 
-      sunt aspernatur rem quo porro molestias nihil?</p>
-    <p>Paragrafo
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-      Doloribus et aliquam dolorum, laudantium dolores adipisci 
-      numquam non fugit suscipit vitae reprehenderit! Id reiciendis 
-      sunt aspernatur rem quo porro molestias nihil?</p>
-      
-</body>
+    <p> Texto em <strong>negrito</strong> </p>
+    <p> Texto em <em>Itálico</em></p>
+    <p> Texto com <mark>Marcação</mark></p>
+    <p> Texto com <small>Small</small></p>
+    <p> Texto <del> removido</del></p>
+    <p> Texto <ins>Sublinhado</ins></p>
+    <p> Texto <sub>Subscrito</sub></p>
+    <p> Texto <sup>Suerior</sup></p>
+
+    <a href="sobre.html"> Sobre</a>
+    <br>
+    <a href="https://foodbase.com.br/receitas/faca-facil-2-deliciosos-sorvetes-de-abacate">
+      <img src="./html_css1/img/sorvete2.jfif" alt="Sorvete Chocolate" height="200">
+    </a>
+
+    <h2>Lista Não Ordenda</h2> <!-- Lista não ordenada--> 
+    <ul>
+      <li>Item 1</li>
+      <li>Item 4</li>
+      <li>Item 3</li>
+      <li>Item 2</li>
+    </ul>
+
+    <h2>Lista Ordenada</h2> <!-- Lista não ordenada--> 
+    <ol>
+      <li>Item 1</li>
+      <li>Item 4</li>
+      <li>Item 3</li>
+      <li>Item 2</li>
+    </ol>
+
+    <table>
+      <tr>
+        <th>Nome</th>
+        <th>E-mail</th>
+      </tr>
+      <tr>
+        <td>Francisco Rosemberg</td>
+        <td>frvgomes@gmail.com</td>
+      </tr>
+      <tr>
+        <td>Igor Oliveira</td>
+        <td>contato@programadorbr.com</td>
+      </tr>
+    </table>
+
+  </body>
 </html>
