--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p> Texto <sub>Subscrito</sub></p>
     <p> Texto <sup>Suerior</sup></p>
 
-    <a href="sobre.html"> Sobre</a>
+    <a href="sobre.html"> Desafio 1 - Curriculo</a>
     <br>
     <a href="https://foodbase.com.br/receitas/faca-facil-2-deliciosos-sorvetes-de-abacate">
       <img src="./html_css1/img/sorvete2.jfif" alt="Sorvete Chocolate" height="200">
