--- a/sobre.html
+++ b/sobre.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <title>Sobre nossa empresa</title>
+  <title>Desafio Curriculo</title>
 </head>
 <body>
-  <h1>ProgramadorBR</h1>
-  <p>Nossa missão é ajudar você a programar</p>
+  <h2>Francisco Rosemberg</h2>
+  <strong>Cidade  :</strong>São Bernardo do Campo<br>
+  <strong>Telefone:</strong>(11) 95280-9090<br>
+  <strong>E-mail  :</strong> <a href="mailto:frvgomes@gmail.com">frvgomes@gmail.com</a> <hr>
 
+  <h2>Objetivo</h2>
+  <p>Desenvolver aplicações para web</p>
+  <hr>
+
+  <h2>Formação</h2>
+  <p><strong>Tecnologia em Processamento de Dados </strong><br>
+  FIA - Faculdade de Interação Americana</p><br>
+  <strong> Pós-Gradução em Logística </strong><br>
+  FAFUPI - Faculdade de Funilaria e Pintura<br>
+  <hr>
+
+  <h2>Experiência</h2>
+  <img  src="./html_css1/img/neftali.png" height="50"><br>
+  <strong>Consultor Especialista</strong>
+  <a href="www.neftaliconsultoria.com.br"> Neftali Consultoria</a><br>
+  <p>Responsável por definir arquitetura de solução do software de gestão de frete.</p>
+  <hr>
+  
+  <h2>Habilidades</h2>
+  <ul>
+    <li>Delphi</li>
+    <li>Sql</li>
+    <li>Html</li>
+    <li>Css</li>
+    <li>JavaScript</li>
+  </ul>
+  <hr>
+<br>
+<br>
+   
   <a  href="index.html">Voltar</a>
 </body>
 </html>
