--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Estrutura Html Página 1</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <link rel="stylesheet" href="style.css">
+    <title>Estrutura Html Página 1</title>
   </head>
   <!-- Isso é um comentário -->
   <body>
