--- a/html_css1/index.html
+++ b/html_css1/index.html
@@ -27,7 +27,7 @@
     <a href="sobre.html"> Desafio 1 - Curriculo</a>
     <br>
     <a href="https://foodbase.com.br/receitas/faca-facil-2-deliciosos-sorvetes-de-abacate">
-      <img src="./html_css1/img/sorvete2.jfif" alt="Sorvete Chocolate" height="200">
+      <img src="img/sorvete2.jfif" alt="Sorvete Chocolate" height="200">
     </a>
 
     <h2>Lista Não Ordenda</h2> <!-- Lista não ordenada--> 
