--- a/html_css1/sobre.html
+++ b/html_css1/sobre.html
@@ -22,7 +22,7 @@
   <hr>
 
   <h2>Experiência</h2>
-  <img  src="./html_css1/img/neftali.png" height="50"><br>
+  <img  src="img/neftali.png" height="50"><br>
   <strong>Consultor Especialista</strong>
   <a href="www.neftaliconsultoria.com.br"> Neftali Consultoria</a><br>
   <p>Responsável por definir arquitetura de solução do software de gestão de frete.</p>
