--- a/html_css1/index.html
+++ b/html_css1/index.html
@@ -7,17 +7,19 @@
   </head>
   <!-- Isso é um comentário -->
   <body>
-    <h1>Texto h1</h1>
+    <a id="link" href="#sorvete_menta"> Sorvete </a>
+
+    <h1 id="titulo">Texto h1</h1>
     <h2>Sub-Título h2</h2>
-    <p>Paragrafo
+    <p id="paragrafo">Paragrafo
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
       Doloribus et aliquam dolorum, laudantium dolores adipisci 
       numquam non fugit suscipit vitae reprehenderit! Id reiciendis 
       sunt aspernatur rem quo porro molestias nihil?</p>
 
-    <p> Texto em <strong>negrito</strong> </p>
+    <p class="texto1"> Texto em <strong>negrito</strong> </p>
     <p> Texto em <em>Itálico</em></p>
-    <p> Texto com <mark>Marcação</mark></p>
+    <p class="texto1"> Texto com <mark>Marcação</mark></p>
     <p> Texto com <small>Small</small></p>
     <p> Texto <del> removido</del></p>
     <p> Texto <ins>Sublinhado</ins></p>
@@ -27,7 +29,7 @@
     <a href="sobre.html"> Desafio 1 - Curriculo</a>
     <br>
     <a href="https://foodbase.com.br/receitas/faca-facil-2-deliciosos-sorvetes-de-abacate">
-      <img src="img/sorvete2.jfif" alt="Sorvete Chocolate" height="200">
+      <img id="sorvete_menta" src="img/sorvete2.jfif" alt="Sorvete Chocolate" height="200">
     </a>
 
     <h2>Lista Não Ordenda</h2> <!-- Lista não ordenada--> 
