--- a/html_css1/card.html
+++ b/html_css1/card.html
@@ -12,12 +12,11 @@
 <body>
   <div class="card_model">
     <br>
-    <p>Francisco Rosemberg</p>
-    <br>
+    <h2>Francisco Rosemberg</h2>
     <ul class="lista">
-      <li><img src="img/Insta.png"> instagram</li>
-      <li><img src="img/Twitter.png"> twitter</li>
-      <li><img src="img/Youtube.png"> youtube</li>
+      <a href="#insta"><li class="inst">Instagram</li></a>
+      <a href="#Twitter"><li class="twit">Twitter</li></a>
+      <a href="#Youtube"><li class="yout">Youtube</li></a>
     </ul>
   </div>
   <br>
