--- a/html_css_interm/index.html
+++ b/html_css_interm/index.html
@@ -1,58 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style type="text/css">
-    #container{
-      color: yellow;
-      background-color: blue;
-      width: 300px;
-      height: 100px;
-      overflow-y: auto;
+    body {
+      margin: 0;
+      padding: 0;
     }
-    #quadrado{
-      width: 50px;
-      height: 50px;
-      background-color: blue;
+
+    .header {
+      overflow: hidden;
       margin: auto;
+      width: 80%;
+      background: darkcyan;
+      padding: 15px;
+      font-size: 18px;
     }
-    img{
-      display: block;
-      margin: auto;
+
+    .menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      float: right;
     }
-    #div1{
-      color: blue;
+
+    li {
+      float: left;
+      color: white;
+      margin-right: 15px;
     }
-    #div2{
-      color: rebeccapurple;
+
+    .logo {
+      float: left;
+      color: white;
     }
-    .div_geral{
-      background-color: slategray;
+
+    @media screen and (max-width: 400px) {
+      .logo{
+        float: none;
+        text-align: center;
+      }
+      .menu{
+        margin-top: 20px;
+        float: none;
+        text-align: center;
+      }
+      .li{
+        float: none;
+        background: red;
+        margin-bottom: 5px ;
+        padding: 10px;
+      }
     }
   </style>
 
 </head>
+
 <body>
-  <div id=container>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda nam iure ipsa eos? Ullam nisi beatae sit maxime et facilis quasi veniam magnam unde porro, ex voluptatum nemo explicabo corrupti.
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam minima ad labore nam fugiat, quia architecto a suscipit provident qui dicta facilis nihil sunt quis corporis reprehenderit perferendis ipsa eveniet!
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime natus impedit officiis maiores ea nisi, id facere ex ad aliquid dicta doloribus facilis obcaecati harum, debitis quo possimus praesentium dignissimos.
-  </div>
 
-  <div id="quadrado">
-    <img src="../html_css_basico/img/Insta.png" alt="">  
-  </div>
+  <div class="header">
 
-  
-  <div id="div1" class="div_geral">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat obcaecati nisi optio! Reprehenderit consequuntur error quidem. Velit pariatur architecto accusamus officiis? Maiores optio a et magni quidem autem dicta!
-  </div>
-  <div id="div2" class="div_geral">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perferendis exercitationem eligendi earum amet optio voluptates tempora velit eum maxime, nostrum dolore ab hic aliquid rem temporibus fugiat rerum reprehenderit.
+    <div class="logo">
+      Logo
+    </div>
+
+    <ul class="menu">
+      <li>Home</li>
+      <li>Cursos</li>
+      <li>Contato</li>
+    </ul>
   </div>
 
 </body>
+
 </html>
